<resources>
    <string name="app_name">Foundler.V2</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="name_signup">name</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="other_button">Other</string>
    <string name="log_out">Log out</string>
    <string name="user_settings">Settings</string>
    <string name="name_settings">Name</string>
    <string name="phone_settings">Phone</string>
    <string name="settings_save_changes">Save</string>
    <string name="gender">Gender</string>
    <string name="matches">Matches</string>
    <string name="dislike">Dislike</string>
    <string name="phone_number">Phone Number</string>
    <string name="match_s_name">Match\'s Name</string>
    <string name="match_s_id">Match\'s ID</string>
    <string name="match_s_phone">Match\'s Phone</string>
</resources>
